--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@sentry/node": "^5.4.3",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
+    "multer": "^1.4.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.9.2",
